# LLMFE

./: .gitignore  CLAUDE.md  LOG.md  README.md  REPRODUCE.md  flake.nix  main.py  pyproject.toml  requirements.txt  run_llmfe.sh
data/: arrhythmia-metadata.json  arrhythmia.csv  balance-scale-metadata.json  balance-scale.csv  bike-metadata.json  cmc-metadata.json  covtype-metadata.json  crab-metadata.json  crab.csv  diabetes-metadata.json  eucalyptus-metadata.json  forest-fires-metadata.json  housing-metadata.json  insurance-metadata.json  junglechess-metadata.json  junglechess.csv  pc1-metadata.json  pc1.csv  tic-tac-toe-metadata.json  tic-tac-toe.csv  vehicle-metadata.json  wine-metadata.json
doc/: reproduce.md
llm_engine/: engine.py
llmfe/: buffer.py  code_manipulation.py  config.py  evaluator.py  pipeline.py  profile.py  sampler.py
logs/balance-scale_api_fixed_split_1/: events.out.tfevents.1753058276.laptop.117269.0
logs/balance-scale_debug_split_1/: events.out.tfevents.1753058478.laptop.121241.0  events.out.tfevents.1753058833.laptop.128422.0
logs/balance-scale_debug_split_2/: events.out.tfevents.1753058882.laptop.128422.5
logs/balance-scale_debug_split_3/: events.out.tfevents.1753058932.laptop.128422.10
logs/balance-scale_debug_split_4/: events.out.tfevents.1753058978.laptop.128422.15
logs/balance-scale_debug_split_5/: events.out.tfevents.1753059033.laptop.128422.20
logs/balance-scale_rtx3070_local_split_1/: events.out.tfevents.1753061508.laptop.184014.0
secrets/: hf-token.age  openai-api-key.age
specs/: specification_adult.txt  specification_arrhythmia.txt  specification_balance-scale.txt  specification_bank.txt  specification_bike.txt  specification_blood.txt  specification_breast-w.txt  specification_car.txt  specification_cmc.txt  specification_communities.txt  specification_covtype.txt  specification_crab.txt  specification_credit-g.txt  specification_diabetes.txt  specification_eucalyptus.txt  specification_forest-fires.txt  specification_heart.txt  specification_housing.txt  specification_insurance.txt  specification_junglechess.txt  specification_myocardial.txt  specification_pc1.txt  specification_tic-tac-toe.txt  specification_vehicle.txt  specification_wine.txt
(+216 files in other folders)
