[project]
name = "llmfe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.9.0",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "bitsandbytes>=0.46.1",
    "blinker>=1.9.0",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "cmake>=4.0.3",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "fastapi>=0.116.1",
    "filelock>=3.18.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "fonttools>=4.59.0",
    "fsspec>=2025.7.0",
    "grpcio>=1.73.1",
    "huggingface-hub>=0.33.4",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "kiwisolver>=1.4.8",
    "lit>=18.1.8",
    "markdown>=3.8.2",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.3",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "nvidia-cublas-cu11>=11.11.3.6",
    "nvidia-cuda-cupti-cu11>=11.8.87",
    "nvidia-cuda-nvrtc-cu11>=11.8.89",
    "nvidia-cuda-runtime-cu11>=11.8.89",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "nvidia-cufft-cu11>=10.9.0.58",
    "nvidia-curand-cu11>=10.3.0.86",
    "nvidia-cusolver-cu11>=11.4.1.48",
    "nvidia-cusparse-cu11>=11.7.5.86",
    "nvidia-nccl-cu11>=2.21.5",
    "nvidia-nccl-cu12>=2.26.2",
    "nvidia-nvtx-cu11>=11.8.86",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "safetensors>=0.5.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "starlette>=0.47.2",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "triton>=3.3.1",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "xgboost>=3.0.2",
]
